--- a/client/styles/index.scss
+++ b/client/styles/index.scss
@@ -1,11 +1,59 @@
-body {
-  position: absolute;
-  top: 0;
-  left: 0;
-  margin: 0;
-  padding: 20px;
-  font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+// body {
+//   position: absolute;
+//   top: 0;
+//   left: 0;
+//   margin: 0;
+//   padding: 20px;
+//   font: 14px "Helvetica Neue", Helvetica, Arial, sans-serif;
+//   background-color: aquamarine;
+// }
+
+// .container {
+//   position: relative;
+//   left: 50%;
+//   top: 50%;
+//   transform: translate(-50%, 50%);
+//   background-color: black;
+//   width: 50vw;
+//   height: 50vh;
+// }
+
+// .sketch {
+//   position: absolute;
+//   left: 50%;
+//   top: 50%;
+//   transform: translate(-50%, -50%);
+// }
+
+
+import * as React from "react"
+
+const containerStyles = {
+  position: 'relative',
+  left: '50%',
+  top: '50%',
+  transform: 'translate(-50%, 50%)',
+  backgroundColor: 'black',
+  width: '50vw',
+  height: '50vh',
 }
 
+const sketchStyles = {
+  position: 'absolute',
+  left: '50%',
+  top: '50%',
+  transform: 'translate(-50%, -50%)',
+}
 
+const IndexPage = () => {
+  return(
+    <div style={containerStyles}>
+      <div style={sketchStyles}>
 
+      </div>
+    </div>
+  )
+} 
+
+export default IndexPage
+        
